# texlive-batch-installation

./: .gitignore  .mailmap  .travis.yml  LICENSE  README.md  hello.tex  install_tl.py  pyproject.toml  setup.cfg  setup.py  tex-packages.txt
.github/workflows/: ci.yml  pypi.yml
install_texlive/: __init__.py  __main__.py  parser.py
