[metadata]
name = install_texlive
version = attr: install_texlive.__version__
description = Install texlive without human interaction in the process
url = http://github.com/maxnoe/texlive-batch-installation
author = Maximilian Linhoff
author_email = maximilian.linhoff@tu-dortmund.de
license = MIT

[options]
packages = find:
install_requires =
	pexpect
	requests

[options.entry_points]
console_scripts =
	install_texlive = install_texlive.__main__:main
